# C-simple-graphics-engine

./: CMakeLists.txt  README.md
src/: main.c  model.c  model.h  tridimensional_math.c  tridimensional_math.h  types.c  types.h  windows_math.c  windows_math.h
